Fix extra padding in theme option

--- a/src/modules/Header/Header.module.css
+++ b/src/modules/Header/Header.module.css
@@ -53,6 +53,7 @@
 }
 
 .themeModule {
+	grid-gap: 0;
 	grid-row: 6;
 	grid-column: 1;
 }
